--- a/test-news.html
+++ b/test-news.html
@@ -53,140 +53,120 @@
                     </div>
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
                 <div class="nav-btn-wrap btn-group  pull-right">
-                    <button class="btn btn-primary" target =  "_blank" onclick="window.location.href='http://bioinfo.usu.edu/covidTracker/'">Covid 19 Tracker</button>
-                    <button class="btn btn-primary"  onclick="window.location.href='#enroll'">Join Research</button>
-                  </div>                <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
+                  <button class="btn btn-primary" target =  "_blank" onclick="window.location.href='http://bioinfo.usu.edu/covidTracker/'">Covid 19 Tracker</button>
+                  <button class="btn btn-primary"  onclick="window.location.href='#enroll'">Join Research</button>
+                </div>
+                  <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
+                    <li>
+                        <a href="index.html" title="Home">Home</a>
+                    </li>
+                    <li class="dropdown">
+                      <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">
+                        Research <span class="caret"></span>
+                      </a>
+                      <ul class=" dropdown-menu" role="menu">
+                          <li>
+                              <a href="lab_research.html" title="Books">Research Page</a>
+                          </li>
+                          <li  class="">
+                              <a href="research_single.html?research=ai" title="Journal Articles">Research Single Page</a>
+                          </li>
+                      </ul>
+                    </li>
+                    <li class="dropdown">
+                      <a href="people.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">
+                        People<span class="caret"></span>
+                      </a>
+                      <ul class="dropdown-menu" role="menu">
                         <li>
-                            <a href="index.html" title="Home">Home</a>
+                            <a href="professor.html" title="Dr Rushmore">Dr. Rakesh Kaundal</a>
                         </li>
-                        <li class="dropdown">
-                                <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" href="#" title="Events"
-                                    data-animations="zoomIn">Research <span class="caret"></span></a>
-                                <ul class=" dropdown-menu" role="menu">
-                                    <li>
-                                        <a href="lab_research.html" title="Books">Research Page</a>
-                                    </li>
-                                    <li  class="">
-                                        <a href="research_single.html?research=ai" title="Journal Articles">Research Single Page</a>
-                                    </li>
-                                </ul>
+                        <li class="">
+                            <a href="ourteam.html" title="Our Team">Our Team</a>
                         </li>
-                        <li class="dropdown">
-                                <a href="people.html" class="dropdown-toggle"   data-hover="dropdown" title="People" data-animations="zoomIn">People<span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                <li>
-                                    <a href="professor.html" title="Dr Rushmore">Dr. Rakesh Kaundal</a>
-                                </li>
-                                <li class="">
-                                    <a href="ourteam.html" title="Our Team">Our Team</a>
-                                </li>
-                                <li class="">
-                                    <a href="alumni.html" title="Our Team">Alumni</a>
-                                </li>
-                            </ul>
+                        <li class="">
+                            <a href="alumni.html" title="Our Team">Alumni</a>
                         </li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Publications" data-animations="zoomIn">Publications <span class="caret"></span></a>
-                            <ul class=" dropdown-menu" role="menu">
-                                    <li>
-                                            <a href="lab_journal.html" title="Journal Articles">Journal Articles</a>
-                                        </li>
-                                        <li>
-                                            <a href="lab_conf-talk.html" title="Conferences and Talks">Conferences and Talks</a>
-                                        </li>
-                                <!-- <li>
-                                    <a href="lab_book.html" title="Books">Books</a>
-                                </li> -->
+                      </ul>
+                    </li>
+                    <li class="dropdown">
+                      <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Publications" data-animations="zoomIn">Publications <span class="caret"></span></a>
+                      <ul class=" dropdown-menu" role="menu">
+                        <li>
+                          <a href="lab_journal.html" title="Journal Articles">Journal Articles</a>
+                        </li>
+                        <li>
+                            <a href="lab_conf-talk.html" title="Conferences and Talks">Conferences and Talks</a>
+                        </li>
+                      </ul>
+                    </li>
+                    <li class="dropdown">
+                      <a href="events.html" class="dropdown-toggle"   data-hover="dropdown" title="Tools" data-animations="zoomIn">
+                        Tools<span class="caret"></span>
+                      </a>
+                      <ul class=" dropdown-menu" role="menu">
+                        <li>
+                          <a href="http://bioinfo.usu.edu/deepHPI/" target="_blank" title="deepHPI">deepHPI</a>
+                        </li>
+                        <li>
+                          <a href="http://bioinfo.usu.edu/NECminer/" target="_blank" title="NECminer">NECminer</a>
+                        </li>
+                        <li>
+                            <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank" title="PredHPI">PredHPI</a>
+                        </li>
+                        <li>
+                            <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank" title="GreeningDB">GreeningDB</a>
+                        </li>
+                        <li>
+                            <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank" title="citSATdb">citSATdb</a>
+                        </li>
+                        <li>
+                            <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank" title="Plant-mSubP">Plant-mSubP</a>
+                        </li>
+                        <li>
+                            <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank" title="LacSubPred">LacSubPred</a>
+                        </li>
+                        <li>
+                            <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">LigPred</a>
+                        </li>
+                        <li>
+                            <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">AP-iNET</a>
+                        </li>
+                        <li>
+                            <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank" title="AtSubP">AtSubP</a>
+                        </li>
+                         <li>
+                            <a href="http://bioinfo.usu.edu/PLpred/" target="_blank" title="PLpred">PLpred</a>
+                        </li>
+                        <li>
+                            <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank" title="RSLpred">RSLpred</a>
+                        </li>
+                        <li>
+                            <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank" title="RB-Pred">RB-Pred</a>
+                        </li>
+                        <li>
+                            <a href="http://bioinfo.usu.edu/legumeSSRdb/" target="_blank" title="deepHPI">legumeSSRdb</a>
+                        </li>
+                      </ul>
+                    </li>
 
-                            </ul>
+                    <li class="dropdown">
+                      <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">Events <span class="caret"></span></a>
+                      <ul class=" dropdown-menu" role="menu">
+                        <li>
+                          <a href="lab_events.html" title="Books">Events Page</a>
                         </li>
-                        <li class="dropdown">
-                                <a href="events.html" class="dropdown-toggle"   data-hover="dropdown" title="Tools" data-animations="zoomIn">Tools<span class="caret"></span></a>
-                                <ul class=" dropdown-menu" role="menu">
-                                    <li>
-                                    <a href="http://bioinfo.usu.edu/deepHPI/" target="_blank"
-                                        title="deepHPI">deepHPI</a>
-                                </li>
-                                <li>
-                                    <a href="http://bioinfo.usu.edu/NECminer/" target="_blank"
-                                        title="NECminer">NECminer</a>
-                                </li>
-                                <li>
-                                    <a href="http://bioinfo.usu.edu/PredHPI/" target="_blank"
-                                        title="PredHPI">PredHPI</a>
-                                </li>
-                                <li>
-                                    <a href="http://bioinfo.usu.edu/GreeningDB/" target="_blank"
-                                        title="GreeningDB">GreeningDB</a>
-                                </li>
-                                <li>
-                                    <a href="http://bioinfo.usu.edu/citSATdb/" target="_blank"
-                                        title="citSATdb">citSATdb</a>
-                                </li>
-                                <li>
-                                    <a href="http://bioinfo.usu.edu/rtools/Plant-mSubP/" target="_blank"
-                                        title="Plant-mSubP">Plant-mSubP</a>
-                                </li>
-                                <li>
-                                    <a href="http://bioinfo.usu.edu/lacsubpred" target="_blank"
-                                        title="LacSubPred">LacSubPred</a>
-                                </li>
-                                <li>
-                                    <a href="http://bioinfo.usu.edu/ligpred" target="_blank" title="LigPred">LigPred</a>
-                                </li>
-                                <li>
-                                    <a href="http://bioinfo.usu.edu/AP-iNET" target="_blank" title="Ap-iNet">AP-iNET</a>
-                                </li>
-                                <li>
-                                    <a href="http://bioinfo3.noble.org/AtSubP/" target="_blank"
-                                        title="AtSubP">AtSubP</a>
-                                </li>
-                                 <li>
-                                    <a href="http://bioinfo.usu.edu/PLpred/" target="_blank" title="PLpred">PLpred</a>
-                                </li>
-                                <li>
-                                    <a href="http://www.imtech.res.in/raghava/rslpred/" target="_blank"
-                                        title="RSLpred">RSLpred</a>
-                                </li>
-                                <li>
-                                    <a href="http://www.imtech.res.in/raghava/rbpred/" target="_blank"
-                                        title="RB-Pred">RB-Pred</a>
-                                </li>
-                                <li>
-                                    <a href="http://bioinfo.usu.edu/legumeSSRdb/" target="_blank"
-                                        title="deepHPI">legumeSSRdb</a>
-                                </li>
-                                </ul>
+                        <li>
+                          <a href="events_single.html?event=psc" title="Journal Articles">Events Single Page</a>
                         </li>
-
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">Events <span class="caret"></span></a>
-                            <ul class=" dropdown-menu" role="menu">
-                                <li>
-                                    <a href="lab_events.html" title="Books">Events Page</a>
-                                </li>
-                                <li>
-                                    <a href="events_single.html?event=psc" title="Journal Articles">Events Single Page</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li >
-                            <a href="future_member.html" title="Future Member">Contact</a>
-                        </li>
-                        <!-- <li class="dropdown active">
-                                <a class="dropdown-toggle" data-toggle="dropdown"  data-hover="dropdown" href="#" title="Events" data-animations="zoomIn">News <span class="caret"></span></a>
-                                <ul class=" dropdown-menu" role="menu"> -->
-                                    <li class="active">
-                                        <a href="news.html" title="News">News</a>
-                                    </li>
-                                    <!-- <li>
-                                        <a href="news_single.html?news=news1" title="News Single">News Single Page</a>
-                                    </li> -->
-                                <!-- </ul>
-                            </li> -->
-                        <!-- <li>
-                            <a href="future_member.html" title="Future Member">Future Member</a>
-                        </li> -->
+                      </ul>
+                    </li>
+                    <li >
+                      <a href="future_member.html" title="Future Member">Contact</a>
+                    </li>
+                    <li class="active">
+                      <a href="news.html" title="News">News</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -219,9 +199,9 @@
       <section class="thumbnail">
         <img src="assets/img/events/Sand_2020/1.jpg"/>
         <div class="caption">
-          <h5>Naveen goes to town</h5>
+          <h5>Naveen presents at International Plant Animal Genome Conference</h5>
           <p>
-            Naveen hit the streets and presented a poster on citSatdb and gave an oral presentation on GreeningDB.
+            Naveen a poster on citSatdb and gave an oral presentation on GreeningDB.
           </p>
         </div>
       </section>
@@ -229,9 +209,9 @@
       <section class="thumbnail">
         <img src="assets/img/profile/shelby.jpg"/>
         <div class="caption">
-          <h5>Shelby's here: Whaddup!</h5>
+          <h5>New HPC Admin: Shelby McCowan</h5>
           <p>
-            We have a new HPC admin and he's poppin', if he does say so himself.
+            Shelby McCowan has joined the team and will be taking over as the new HPC Admin.
           </p>
         </div>
       </section>
@@ -239,9 +219,9 @@
       <section class="thumbnail">
         <img src="assets/img/profile/rsz_akshat.jpg"/>
         <div class="caption">
-          <h5>Guy with a beard joined the team</h5>
+          <h5>New Graduate Research Assistant</h5>
           <p>
-            He is joining as a graduate research assistant. Helpful! He also has a beard.
+            Akshat Kumar has joined KAABiL as a new graduate research assistant.
           </p>
         </div>
       </section>
@@ -264,9 +244,9 @@
       <section class="thumbnail">
         <img src="assets/img/covid19.PNG"/>
         <div class="caption">
-          <h5>COVID-19 is here and we can track it!</h5>
+          <h5>COVID-19 Tracker</h5>
           <p>
-            We're afraid of COVID-19 and so are you but now we know more about the monster under our bed. Stop sneezing, guys!
+            KAABiL now has a dashboard for tracking global COVID-19 data
           </p>
         </div>
       </section>
@@ -278,9 +258,9 @@
       <section class="thumbnail">
         <img src="assets/img/profile/shelby.jpg"/>
         <div class="caption">
-          <h5>Local teenager defies rules</h5>
+          <h5>New Blog</h5>
           <p>
-            A local teenager put his stuff against the wall even though it said not to. Spicy!
+            KAABiL has a blog that we might write to one day.
           </p>
         </div>
       </section>
